--- a/10_clases_de_django_http_servidor.ipynb
+++ b/10_clases_de_django_http_servidor.ipynb
@@ -73,7 +73,7 @@
     "* ```get_host()``` regresa la *URL* del servidor.\n",
     "* ```get_port()``` regresa el puerto de conexión al servidor.\n",
     "* ```get_full_path()``` regresa la URL incluyendo los argumentos.\n",
-    "* ```ge_full_path_info()``` es similar a ```get_full_path()```, pero utiliznado el atributo ```path_info```.\n",
+    "* ```get_full_path_info()``` es similar a ```get_full_path()```, pero utiliznado el atributo ```path_info```.\n",
     "* ```build_absolute_uri()``` regresa la *URL* absoluta.\n",
     "* ```is_secure()``` indica si la conexión es segura.\n",
     "\n",
@@ -98,7 +98,7 @@
     "\n",
     "Los atributos ```GET``` y ```PUT``` de la clase ```django.http.HtmlRequest``` son instancias de la clase ```django.http.QueryDict```.\n",
     "\n",
-    "La clase ```django.http.QueryDict``` es similar a un objeto tipo ```dict```, con la diferencia de que puede contener más de un elemento con el mismo identificador, el cual es guradado en un objeto de tipo ```list``.\n",
+    "La clase ```django.http.QueryDict``` es similar a un objeto tipo ```dict```, con la diferencia de que puede contener más de un elemento con el mismo identificador, el cual es guradado en un objeto de tipo ```list```.\n",
     "\n",
     "La clase ```django.http.QueryDict``` es inmutable.\n",
     "\n",
@@ -128,7 +128,7 @@
     "* ```__getitem__()```.\n",
     "* ```_contains__()```.\n",
     "* ```get()```.\n",
-    "* ```dict()```.\n",
+    "* ```dict()``` convierte el contenido del objeto ```django.http.QueryDict``` en un objeto tipo ```dict```.\n",
     "* ```copy()```.\n",
     "* ```urlencode()```.\n",
     "\n",
@@ -229,12 +229,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%cp src/10/urls.py tutorial/main/urls.py "
+    "## Ejemplo ilustrativo.\n",
+    "\n",
+    "El archivo ```src/10/urls.py``` contiene el siguiente código:\n",
+    "\n",
+    "\n",
+    "``` python\n",
+    "from django.urls import path, re_path \n",
+    "from . import views\n",
+    "\n",
+    "\n",
+    "urlpatterns = [path('', views.index, name=\"inicio\"), \n",
+    "               path('vista', views.vista),\n",
+    "               re_path(r'^claves/(?P<clave>[0-9]{4}$)', views.clave),\n",
+    "               path('claves/<int:numero>', views.numero),\n",
+    "               path('claves/<str:nombre>', views.saluda),\n",
+    "               path('json', views.respuesta_json),\n",
+    "               path('contenido', views.contenido),\n",
+    "               path('error', views.error)]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para la plataforma GNU/Linux y MacOS X:"
    ]
   },
   {
@@ -243,7 +266,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cat tutorial/main/urls.py "
+    "!cp src/10/urls.py tutorial/main/urls.py "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para la plataforma Windows:"
    ]
   },
   {
@@ -252,7 +282,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/10/views.py tutorial/main/views.py "
+    "!copy src\\10\\urls.py tutorial\\main\\urls.py "
    ]
   },
   {
@@ -261,7 +291,96 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cat tutorial/main/views.py "
+    "%pycat tutorial/main/urls.py "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El archivo ```src/10/views.py``` contiene el siguiente código:\n",
+    "\n",
+    "\n",
+    "``` python\n",
+    "from django.http import HttpResponse, HttpResponseServerError, JsonResponse\n",
+    "from django.views.decorators.csrf import csrf_exempt\n",
+    "\n",
+    "\n",
+    "def index(request):\n",
+    "    return HttpResponse(\"<h1>Hola, mundo.</h1>\")\n",
+    "\n",
+    "\n",
+    "def vista(request):\n",
+    "    return HttpResponse('<ul><li>URL: {}</li><li>Método: {}</li><li>Codificación: {}</li><li>Argumentos: {}</li></ul>'.format(request.path, request.method, request.encoding, request.GET.dict()))\n",
+    "\n",
+    "\n",
+    "def clave(request, clave):\n",
+    "    return HttpResponse('<h1>Introdujiste la clave: {}</h1>'.format(str(clave)))\n",
+    "\n",
+    "\n",
+    "def numero(request, numero):\n",
+    "    return HttpResponse('<h1>Introdujiste el número: {}</h1>'.format(str(numero)))\n",
+    "\n",
+    "\n",
+    "def saluda(request, nombre):\n",
+    "    return HttpResponse('<h1>¡Hola, {}!</h1>'.format(nombre))\n",
+    "\n",
+    "\n",
+    "def respuesta_json(request):\n",
+    "    return JsonResponse({'tipo contenido':request.content_type, 'metodo':request.method, 'ruta':request.path})\n",
+    "\n",
+    "\n",
+    "def error(request):\n",
+    "    return HttpResponseServerError('<h1>¡Ups!</h1>')\n",
+    "\n",
+    "\n",
+    "@csrf_exempt\n",
+    "def contenido(request):\n",
+    "    return JsonResponse(request.POST.dict())\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para la plataforma GNU/Linux y MacOS X."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "!cp src/10/views.py tutorial/main/views.py "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Para la plataforma Windows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!copy src\\10\\views.py tutorial\\main\\views.py "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pycat tutorial/main/views.py "
    ]
   },
   {
@@ -306,9 +425,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://localhost:5000/main/error\n",
+    "http://localhost:5000/main/error\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "http://localhost:5000/main/listas\n",
     "\n",
-    "http://localhost:5000/main/otro_error"
+    "http://localhost:5000/main/listas?nombre=jose&apellido=perez\n",
+    "\n",
+    "\n",
+    "http://localhost:5000/main/listas?nombre=jose&apellido=perez&nombre=Jesus&nombre=Pablo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "http://localhost:5000/main/contenido\n",
+    "\n",
+    "http://localhost:5000/main/contenido?nombre=jose&apellido=perez\n",
+    "\n",
+    "\n",
+    "http://localhost:5000/main/contenido?nombre=jose&apellido=perez&nombre=Jesus&nombre=Pablo"
    ]
   },
   {
