--- a/11_clases_de_django_http_cliente.ipynb
+++ b/11_clases_de_django_http_cliente.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,44 +18,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "respuesta_get = get(\"http://localhost:5000/main/otro_error\")"
+    "respuesta_get = get(\"http://localhost:5000/main/error\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "500"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "respuesta_get.status_code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'<h1>\\xc2\\xa1Ups!</h1>'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "respuesta_get.content"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<h1>¡Ups!</h1>'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "datos = {\"nombre\": \"Juan\",\"primer_apellido\": \"Pérez\",  \"segundo_apellido\":\"Sánchez\",\n",
-    "        \"carrera\": \"Medicina\", \"semestre\": 7, \"promedio\": 8.9, \"al_corriente\": True}"
+    "respuesta_get.text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos = {\"nombre\": \"Juan\",\n",
+    "         \"primer_apellido\": \"Pérez\",\n",
+    "         \"segundo_apellido\":\"Sánchez\",\n",
+    "        \"carrera\": \"Medicina\"\n",
+    "         , \"semestre\": 7,\n",
+    "         \"promedio\": 8.9,\n",
+    "         \"al_corriente\": True}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,29 +111,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "respuesta_post.status_code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 53,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"nombre\": \"Juan\", \"primer_apellido\": \"P\\\\u00e9rez\", \"segundo_apellido\": \"S\\\\u00e1nchez\", \"carrera\": \"Medicina\", \"semestre\": \"7\", \"promedio\": \"8.9\", \"al_corriente\": \"True\"}'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "respuesta_post.json()"
+    "respuesta_post.text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://localhost:5000/main/contenido'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "respuesta_post.url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "respuesta_post.url"
+    "respuesta_post.close()"
    ]
   },
   {
