--- a/12_configuracion_de_bases_de_datos.ipynb
+++ b/12_configuracion_de_bases_de_datos.ipynb
@@ -30,7 +30,7 @@
     "* *Oracle*.\n",
     "* *SQLite*.\n",
     "\n",
-    "La referencia completa del usos de bases de datos de *Django* puede ser consultada en https://docs.djangoproject.com/en/2.1/ref/databases/\n",
+    "La referencia completa del usos de bases de datos de *Django* puede ser consultada en https://docs.djangoproject.com/en/2.2/ref/databases/\n",
     "\n",
     "Existen proyectos que pueden soportan la creaciór de modelos en bases de datos NoSQL, tales como [*djongo*](https://nesdis.github.io/djongo/), pero para este curso sólo se estudiarán las bases de datos relacionales soportadas por defecto."
    ]
@@ -77,9 +77,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Ejemplo:**\n",
+    "### Configuración inicial del proyecto con *SQLite*.\n",
     "\n",
-    "* Se consultará la configuración de las bases de datos del proyecto localizado en el subdirectorio *tutorial*."
+    "El archivo ```tutorial/tutorial/settings.py``` contiene la configuración que se creó al momento de generar el proyecto, la cual define una conexión a una base de datos [*SQLite*](https://www.sqlite.org) cuyo archivo se encuentra localizado en ```tutorial/db.sqlite3````.\n",
+    "\n",
+    "**Nota:** La base de datos *SQLite* instalada es totalmente funcional para fines didácticos, por lo que no es obligatorio modificar la configuración inicial a menos que se desee utilizar otro gestor de bases de datos.\n",
+    "\n",
+    "La variable ```DATABASES``` define lo siguiente:\n",
+    "\n",
+    "``` python\n",
+    "DATABASES = {\n",
+    "    'default': {\n",
+    "        'ENGINE': 'django.db.backends.sqlite3',\n",
+    "        'NAME': os.path.join(BASE_DIR, 'db.sqlite3'),\n",
+    "    }\n",
+    "}\n",
+    "```"
    ]
   },
   {
@@ -88,32 +101,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tutorial.tutorial.settings as settings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "settings.DATABASES"
+    "%pycat tutorial/tutorial/settings.py"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* En este caso, la instalación de *Django* está utilizando un archivo que contiene una base de datos de [*SQLite*](https://www.sqlite.org)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Estructura del objeto *DATABASES*.\n",
+    "### Estructura de *DATABASES*.\n",
     "\n",
     "El objeto database es de tipo *dict* y puede contener más de un acceso a base de datos conforme a la siguiente sintaxis.\n",
     "\n",
@@ -123,7 +118,7 @@
     "            ...\n",
     "            <dentificador n>:{<argumentos de configuración>},} \n",
     "```\n",
-    "La configuración de cada base de datos también corresponde a un objeto *dict*, ligado a un identificador. El identificador por defecto es *default*. "
+    "La configuración de cada base de datos también corresponde a un objeto *dict*, ligado a un identificador. El identificador por defecto es ```default```. "
    ]
   },
   {
@@ -134,30 +129,46 @@
     "\n",
     "Los parámetros que definen la conexión de una base de datos pueden ser consultados en la siguiente liga:\n",
     "\n",
-    "https://docs.djangoproject.com/en/2.1/ref/settings/#databases\n",
+    "https://docs.djangoproject.com/en/2.2/ref/settings/#databases\n",
     "\n",
     "Los parámetros más comunes son los siguientes:\n",
     "\n",
-    "* *'ENGINE'*': indica el módulo de *Django* que se utilizará, dependiendo de la base de datos de la que se trate.\n",
-    "* *'NAME'*: indica el nombre de la base de datos.\n",
-    "* *'USER'*: indica el usuario con acceso a los recursos de la base da datos.\n",
-    "* *'PASSWORD'*: indica la contraseña del usuario con acceso a los recursos de la base da datos.\n",
-    "* *'HOST*: Indica la URL en la que se encuentra escuchando el gestor de la base de datos.\n",
-    "* *'PORT'*: Indica el puerto en el que se encuentra escuchando el gestor de la base de datos."
+    "* ```'ENGINE'```: indica el módulo de *Django* que se utilizará, dependiendo de la base de datos de la que se trate.\n",
+    "* ```'NAME'```: indica el nombre de la base de datos.\n",
+    "* ```'USER'```: indica el usuario con acceso a los recursos de la base da datos.\n",
+    "* ```'PASSWORD'```: indica la contraseña del usuario con acceso a los recursos de la base da datos.\n",
+    "* ```'HOST```: Indica la URL en la que se encuentra escuchando el gestor de la base de datos.\n",
+    "* ```'PORT'```: Indica el puerto en el que se encuentra escuchando el gestor de la base de datos."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Ejemplo:**\n",
+    "## Configuración de una base de datos *MySQL*/*MariaDB*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Nota:** Las celdas de esta sección configurarán una conexión creada específicamente para la base de datos que se encuentra ejecutándose en la máquina virtual publicada por Pythonista®. En caso de usar un gestor de bases de datos distinto, no se deben de ejecutar las siguientes celdas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En vista de que el conector de Django no funciona correctamente con Python 3, se utilizará [*mysql.connector*](https://www.mysql.com/products/connector/) como *engine*.\n",
     "\n",
-    "La siguiente configuración define una conexión al gestor de bases de datos MySQL con identificador *default*.\n",
-    "* La utiliza *mysql.connector* como *engine*.\n",
-    "* Define al usuario *root* con la contraseña *0p3n5t4ck*.\n",
-    "* Define a la base de datos con nombre *db_django* .\n",
-    "    \n",
-    "**Nota:** En caso de que la contraseña del usuario *root* de MySQL sea distinta de *0p3n5t4ck*, sustitúyala donde corresponda."
+    "La máquina virtual publicada por Pythonista<sup>®</sup> cuenta con un servicio de *MariaDB* ejecutándose con las siguientes características:\n",
+    "\n",
+    "* Usuario: ```root```\n",
+    "* Contraseña: ```0p3n5t4ck```\n",
+    "* Host: ```localhost``` accesible exclusivamente desde la máquina virtual.\n",
+    "* Puerto: ```3306```\n",
+    "\n",
+    "El script ```src/12/settings.py``` contiene la siguiente configuración que define una conexión al gestor de bases de datos *MySQL* con clave ```'default'```."
    ]
   },
   {
@@ -172,21 +183,23 @@
     "                'HOST': 'localhost',\n",
     "                'PORT': 3306},\n",
     "}\n",
-    "```"
+    "```\n",
+    "\n",
+    "**Advertencia:** Esta configuración fue creada para el servicio de base de datos de la máquina virtual publicada por Pythonista<sup>®</sup>. En caso de usar otra base de datos con otras credenciales de usuario, es necesario editar directamemente el script ```tutorial/tutorial/settings.py```."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El archivo *src/12/settings.py* contiene las modificaciones indicadas previamente."
+    "* La siguiente celda sustituirá al archivo ```tutorial/tutorial/settings.py``` con el archivo ```src/12/settings.py```."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda sustituirá al archivo *tutorial/tutorial/settings.py* con el archivo *src/12/settings.py*."
+    "* Para la plataforma GNU/Linux."
    ]
   },
   {
@@ -206,25 +219,25 @@
    },
    "outputs": [],
    "source": [
-    "from tutorial.tutorial import settings as settings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "settings.DATABASES"
+    "%pycat tutorial/tutorial/settings.py"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Instalación de *mysql-connector-python*.\n",
+    "## La extensión ```ipython-sql```.\n",
     "\n",
-    "Debido a que *django.db.backends.mysql no funciona adecuadamente con Python 3, se utilizará  *mysql-connector-python* para conectarse al servidor *MySQL*."
+    "La extensión de ```IPython``` llamada ```ipython-sql``` permite conectarse a un gestor de bases de datos y ejecutar consultas *SQL* desde una celda usando el comando mágico ```%%sql```.\n",
+    "\n",
+    "La referencia a esta extensión se encuentra en https://github.com/catherinedevlin/ipython-sql."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda instalará la extensión ```ipython-sql```."
    ]
   },
   {
@@ -235,36 +248,14 @@
    },
    "outputs": [],
    "source": [
-    "!pip install mysql-connector-python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Este paquete contiene el *engine* *mysql.connector.django*, el cual permite a *Django* acceder a *MySQL*."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Creación de la base de datos *db_django* en MySQL.\n",
-    "\n",
-    "Para crear una base de datos se instalará y utilizará el comando mágico *%%sql*.\n",
-    "\n",
-    "La referencia a esta herramienta se encuentra en: \n",
-    "\n",
-    "https://github.com/catherinedevlin/ipython-sql"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "! pip install ipython-sql"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda cargará la extensión a esta notebook."
    ]
   },
   {
@@ -469,7 +460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
